--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "nimiq-funder",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --open",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build && yarn build-umd",
+    "build-umd": "vue-cli-service build --target lib --name nimiq-funder --dest ./dist-umd ./src/main.js && cp ./demo.html dist-umd/demo.html",
+    "build-help": "vue-cli-service build --help",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -13,9 +15,9 @@
     "vue": "^2.5.16"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.9",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.9",
-    "@vue/cli-service": "^3.0.0-beta.9",
+    "@vue/cli-plugin-babel": "^3.0.0-beta.10",
+    "@vue/cli-plugin-eslint": "^3.0.0-beta.10",
+    "@vue/cli-service": "^3.0.0-beta.10",
     "vue-template-compiler": "^2.5.13"
   },
   "babel": {
