--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vue-slide-bar": "^1.1.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.10",
